[package]
name = "launcher_egui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
detour = "0.8.1"
eframe = "0.16.0"
serde = { version = "1.0.133", features = ["derive"] }
toml = "0.5.8"

[profile.release]
lto = true
panic = 'abort'
strip = true
codegen-units = 1
incremental = true