[package]
name = "launcher_egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.16.0", features = [ "persistence" ] }
serde = { version = "1.0.133", features = [ "derive" ] }
toml = "0.5.8"
rfd = "0.6.4"

[profile.release]
lto = true
panic = 'abort'
strip = true
codegen-units = 1
incremental = true