[package]
name = "launcher_egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.17.0", features = [ "persistence" ] }
num = "0.4.0"
strum = "0.24.0"
strum_macros = "0.24.0"
toml_edit = "0.13.4"

[profile.release]
lto = true
panic = 'abort'
strip = true
codegen-units = 1
incremental = true
